live/mgmt/argocd/controller-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: argocd-application-controller
          resources:
            requests:
              cpu: 2
              memory: "2Gi"
