live/mgmt/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`argocd.dsmillie.cts-gcp.com`) && PathPrefix(`/`)
    middlewares:
    - name: https-only
      namespace: default
    services:
    - name: argocd-server
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.dsmillie.cts-gcp.com`) && PathPrefix(`/`)
    services:
    - name: argocd-server
      port: 8080
  tls:
    secretName: argocd-cert
